[#3] - Creates logic to send order to notifier queue

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,4 +48,4 @@ management:
 api:
   clients:
     order-service:
-      url: ${API_GATEWAY_URL:http://localhost:8765/orders}
+      url: ${ORDER_SERVICE_URL:http://localhost:8765/orders}
