--- a/.github/workflows/github-pipeline-prod.yml
+++ b/.github/workflows/github-pipeline-prod.yml
@@ -3,7 +3,7 @@ name: Build and tests
 on:
   push:
     branches:
-      - '**'
+      - master
 
 jobs:
   build-order-model:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: juniorjrc/order-model
-          ref: dev
+          ref: master
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout ORDER PROCESSOR repository
         uses: actions/checkout@v4
         with:
-          ref: dev
+          ref: master
 
       - name: Set up JDK
         uses: actions/setup-java@v4
